# routes/exerciseRoutes.js
@@ -2,12 +2,56 @@ const router = require("express").Router();
 const exerciseController = require("../controllers/exerciseController");
 const isAuthenticated = require("../middleware/authenticate");
 
-router.get("/", exerciseController.getAllExercises);
-router.get("/:id", exerciseController.getExerciseById);
+router.get(
+  "/",
+  /* #swagger.tags = ['Exercises'] */
+  exerciseController.getAllExercises
+);
+router.get(
+  "/:id",
+  /* #swagger.tags = ['Exercises'] */
+  exerciseController.getExerciseById
+);
 
-router.post("/", isAuthenticated, exerciseController.createExercise);
-router.put("/:id", isAuthenticated, exerciseController.updateExercise);
+router.post(
+  "/",
+  isAuthenticated,
+  /* #swagger.tags = ['Exercises']
+     #swagger.description = 'Create a new exercise'
+     #swagger.parameters['body'] = {
+       in: 'body',
+       required: true,
+       schema: {
+         $name: 'Barbell Squat',
+         $muscleGroup: 'Legs',
+         $duration: 20
+       }
+     }
+  */
+  exerciseController.createExercise
+);
+router.put(
+  "/:id",
+  isAuthenticated,
+  /* #swagger.tags = ['Exercises']
+     #swagger.description = 'Update an exercise'
+     #swagger.parameters['body'] = {
+       in: 'body',
+       required: true,
+       schema: {
+         $name: 'Front Squat',
+         $muscleGroup: 'Legs',
+         $duration: 25
+       }
+     }
+  */
+  exerciseController.updateExercise
+);
 
-router.delete("/:id", exerciseController.deleteExercise);
+router.delete(
+  "/:id",
+  /* #swagger.tags = ['Exercises'] */
+  exerciseController.deleteExercise
+);
 
 module.exports = router;
